# quality-systems-AI

./: .gitignore  PUBLISHER-SUBSCRIBER-SIMULATION.md  QUALITY-ENGG-GUARDRAILS.md  QUALITY-SYSTEMS-GUARDRAILS.md  README.md  TEXT-NARRATIVE-PATH.md  WARRANTY-ADJUDICATION-PATH.md  quality-feedback.md
.github/: dependabot.yml
.github/workflows/: warranty-pages.yml  warranty-test.yml
GradeVision/: .env.example  .gitattributes  .gitignore  CONSOLIDATION_NOTES.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
GradeVision/app/: main.py
reports/: .gitignore
scripts/: simulate_text_path.py
templates/: text_path_report.html
warranty/: .env.example  .gitignore  DEV-LAN-ACCESS.md  P0-IMPLEMENTATION-PLAN.md  README.md  doc.md  evaluate.py  plan.md  presentation.html  pyproject.toml
warranty/models/: manifest.json  metrics.json
warranty/src/warranty/: __init__.py  __main__.py  api.py  claim_tools.py  config.py  handoff.py  llm.py  make_samples.py  orchestrator.py  personas.py  policy_search.py  prompt_safety.py  qualitymind_client.py  schema.py  validation.py
warranty/src/warranty_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
warranty/tests/: conftest.py
warranty/tests/contract/: test_rca_escalation.py
warranty/tests/integration/: test_api.py  test_orchestrator_dry.py  test_tool_loop_mocked.py
warranty/tests/unit/: test_claim_tools.py  test_config.py  test_evaluate.py  test_handoff.py  test_llm_config.py  test_policy_search.py  test_prompt_safety.py  test_routing.py  test_validation.py
(+29 files in other folders)
